# kinect-wrapper

./: CMakeLists.txt  README.md  index.html
doxygen/: generate.txt
doxygen/doc/html/: annotated.html  classes.html  classkinectWrapper_1_1KinectDriver.html  classkinectWrapper_1_1KinectWrapper.html  dir_1caf105552615038a067a5e0b3628349.html  dir_255fa8f554e95a439f260058328638ab.html  dir_315e5efb410a16c3dc704eab1dfa1351.html  dir_451f07972b1bbda26c737cb09edda0a4.html  dir_65d72078f2cb6a873d9d899efb0a00ca.html  dir_9bb0cdb2fc6936e925cffa69d90b0c80.html  dir_a1b31a03c5999012deeb52e88e48b55d.html  dir_e05d7e2b1ecd646af5bb94391405f3b5.html  dir_e3d620c6b6fdb93ed3bc6186215bde2e.html  files.html  functions.html  functions_func.html  group__depthSensing.html  group__kinectClientExample.html  group__kinectDriver.html  group__kinectServer.html  group__kinectWrapper.html  hierarchy.html  index.html  kinectClientExample_2src_2main_8cpp_source.html  kinectDriverOpenNI_8cpp_source.html  kinectDriverOpenNI_8h_source.html  kinectDriverSDK_8cpp_source.html  kinectDriverSDK_8h_source.html  kinectDriver_8h_source.html  kinectServer_2src_2main_8cpp_source.html  kinectTags_8h_source.html  kinectWrapper_8h_source.html  kinectWrapper__client_8cpp_source.html  kinectWrapper__client_8h_source.html  kinectWrapper__server_8cpp_source.html  kinectWrapper__server_8h_source.html  modules.html  structkinectWrapper_1_1Joint.html  structkinectWrapper_1_1Player.html
doxygen/doc/html/search/: all_2.js  all_5.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  groups_0.js  groups_1.js  search.js  searchdata.js
doxygen/doc/latex/: annotated.tex  classkinectWrapper_1_1KinectDriver.tex  classkinectWrapper_1_1KinectWrapper.tex  dir_1caf105552615038a067a5e0b3628349.tex  dir_255fa8f554e95a439f260058328638ab.tex  dir_315e5efb410a16c3dc704eab1dfa1351.tex  dir_451f07972b1bbda26c737cb09edda0a4.tex  dir_65d72078f2cb6a873d9d899efb0a00ca.tex  dir_9bb0cdb2fc6936e925cffa69d90b0c80.tex  dir_a1b31a03c5999012deeb52e88e48b55d.tex  dir_e05d7e2b1ecd646af5bb94391405f3b5.tex  dir_e3d620c6b6fdb93ed3bc6186215bde2e.tex  group__depthSensing.tex  group__kinectClientExample.tex  group__kinectDriver.tex  group__kinectServer.tex  group__kinectWrapper.tex  hierarchy.tex  modules.tex  refman.tex  structkinectWrapper_1_1Joint.tex  structkinectWrapper_1_1Player.tex
modules/: CMakeLists.txt
modules/kinectClient/: CMakeLists.txt
modules/kinectClient/app/scripts/: kinectClient.xml.template
modules/kinectClient/src/: main.cpp
modules/kinectClientExample/: CMakeLists.txt
modules/kinectClientExample/app/scripts/: kinectClientExample.xml.template
modules/kinectClientExample/src/: main.cpp
modules/kinectServer/: CMakeLists.txt
modules/kinectServer/app/conf/: config.ini  kinect.ini
modules/kinectServer/src/: main.cpp
